[gd_scene load_steps=19 format=3 uid="uid://ddmksap2gxosk"]

[ext_resource type="Script" uid="uid://b1vycfioevhyh" path="res://scenes/enemies/enemy1/path_enemy.gd" id="1_5uu7d"]
[ext_resource type="Texture2D" uid="uid://bjql4kkg0jy4" path="res://scenes/enemies/enemy1/enemy_body_spritesheet.png" id="2_m0bq8"]
[ext_resource type="Shader" uid="uid://6ie7ed3aasje" path="res://shaders/foliage.gdshader" id="2_u8gn5"]
[ext_resource type="Texture2D" uid="uid://cem845ub2fsis" path="res://scenes/enemies/enemy1/enemy_mask_spritesheet.png" id="3_u8gn5"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_m0bq8"]
domain_warp_amplitude = 100.0
domain_warp_frequency = 0.5

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_u8gn5"]
seamless = true
noise = SubResource("FastNoiseLite_m0bq8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d6oql"]
shader = ExtResource("2_u8gn5")
shader_parameter/render_noise = false
shader_parameter/noise_texture = SubResource("NoiseTexture2D_u8gn5")
shader_parameter/amplitude = 0.2
shader_parameter/time_scale = 0.04
shader_parameter/noise_scale = 0.001
shader_parameter/rotation_strength = 0.4
shader_parameter/rotation_pivot = Vector2(-0.265, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq2de"]
atlas = ExtResource("2_m0bq8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6oql"]
atlas = ExtResource("2_m0bq8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08wgd"]
atlas = ExtResource("2_m0bq8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1twna"]
atlas = ExtResource("2_m0bq8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3nxvx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq2de")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6oql")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_08wgd")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1twna")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8r5ae"]
atlas = ExtResource("3_u8gn5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh30d"]
atlas = ExtResource("3_u8gn5")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlg88"]
atlas = ExtResource("3_u8gn5")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a72l0"]
atlas = ExtResource("3_u8gn5")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_u7h1f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r5ae")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh30d")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlg88")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a72l0")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5uu7d"]
radius = 27.0185

[node name="enemy1" type="PathFollow2D"]
rotates = false
script = ExtResource("1_5uu7d")

[node name="Animated_body" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_d6oql")
sprite_frames = SubResource("SpriteFrames_3nxvx")
animation = &"down"

[node name="Animated_mask" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u7h1f")
animation = &"down"
frame_progress = 0.743585

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5uu7d")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
